# monte-carlo-mpi

./: .gitignore  CMakeLists.txt  pyproject.toml
launch/: MPI.cpp
monte-carlo/: Makefile
monte-carlo/algorithm/: monte_carlo.c
monte-carlo/cmd/: mpi.c  open_mp.c
monte-carlo/results/: mpi.csv  omp.csv  serial.csv
scripts/: plot_results.py  run_all.py
src/monte_carlo/: __init__.py  cli.py  mpi_parallel.py  openmp_parallel.py  serial.py
